# anisotropic_supervoxel

./: CMakeLists.txt  README.md
GPU-AS/: CMakeLists.txt  Image.cpp  Image.h  README.txt  Render.cpp  Render.h  glad.c  main.cpp
GPU-AS/shaders/: aver_exception.fs  aver_exception.vs  centroids.fs  centroids.gs  density_grid.fs  derivative_t.fs  draw_next_seeds.gs  flood.fs  label_replace.gs  label_replace.vs
streamGPU-AS/: CMakeLists.txt  Image.cpp  Image.h  Render.cpp  Render.h  main.cpp  shader.h
streamGPU-AS/shaders/: RGB2LAB.fs  RGB2LAB.gs  aver_centroids.gs  aver_centroids.vs  aver_exception.gs  aver_exception.vs  centroids.gs  centroids.vs  density_grid.fs  density_grid.gs  density_grid.vs  derivative_t.fs  derivative_t.gs  derivative_t.vs  draw_next_seeds.fs  draw_next_seeds.gs  draw_next_seeds.vs  draw_seeds.fs  draw_seeds.gs  draw_seeds.vs  flood.gs  flood.vs  label.fs  label.gs  label.vs  label_replace.gs
